--- a/index.html
+++ b/index.html
@@ -324,12 +324,12 @@
 
     <footer class="text-center py-3 mt-3" style="background-color: #f8f9fa; font-size: 0.9rem;">
         <p class="mb-1">
-            <a href="https://zwei.de.eu.org" target="_blank">Zwei</a> | 
+            <a href="https://www.nodeseek.com/space/22190" target="_blank">奶茶</a> | 
             <a href="https://github.com/LibreSpark/LibreTTS" target="_blank">Code</a>
         </p>
         <p class="mb-0">
-            由 <a href="https://www.nodeseek.com/post-305185-1" target="_blank">NodeSupport</a> 和 
-            <a href="https://yxvm.com/aff.php?aff=819" target="_blank">YXVM</a> 赞助
+            由 <a href="https://www.nodeseek.com/space/22190" target="_blank">NodeSupport</a> 和 
+            <a href="https://www.nodeseek.com/space/22190" target="_blank">YXVM</a> 赞助
         </p>
     </footer>
 
